<resources>
    <string name="app_name">3GStore</string>
    <string name="nomeAppSpashPage">3G STORE</string>
    <string name="email">E-Mail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Surname</string>
    <string name="nav_header_subtitle">Points: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Shopping Cart</string>
    <string name="menu_promozioni">Promotions</string>
    <string name="menu_marangicoin">Your MarangiCoin</string>
    <string name="menu_contatti">Yours contacts</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_gioco">Quizcoin</string>
    <string name="menu_informazioni">Products Info</string>
    <string name="new_game_label">Insert Coin</string>
    <string name="killscreen_label">Kill Screen</string>
    <string name="exit_label">Exit</string>
    <string name="cronologia">Order History</string>
    <string name="menu_settings">Settings</string>
    <string name="badge_qty"></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back_login">Already registered? Login!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">Insert your registered Email for receive password reset instrucion</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="product_unavailable">The scanned product is unavailable</string>
    <string name="lista_vuota">Your shopping cart is empty</string>
    <string name="shopping_amount">Total Amount: </string>
    <string name="firstName">First name</string>
    <string name="secondName">Second name</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_psw">Enter password!</string>
    <string name="reset_email_success">We have sent you instructions to reset your password!</string>
    <string name="reset_email_fail">Failed to send reset email!</string>
    <string name="registration_fail">Registration failed!</string>
    <string name="your_marangiCoin">Current MarangiCoin: </string>
    <string name="exchange_marangiCoin">Every 20 MarangiCoin you get 1€ of discount on any of our products</string>
    <string name="exchange_button">Exchange</string>
    <string name="marangiCoin">MarangiCoin symbol</string>
    <string name="marangiCoin_exchange">MarangiCoin to exchange</string>
    <string name="euro_exchange">Euro you get</string>
    <string name="current_discount">Current discount: €</string>
    <string name="profile_settings">Settings</string>
    <string name="email_summary">Change your Email</string>
    <string name="password">Password</string>
    <string name="password_vecchia">Old Password</string>
    <string name="password_nuova">New Password</string>
    <string name="password_summary">Change your Password</string>
    <string name="cards">Cards</string>
    <string name="card1">**** **** **** 1234</string>
    <string name="card2">**** **** **** 5678</string>
    <string name="addCard">Add Card</string>
    <string name="cardNum">Card Number</string>
    <string name="tos">Terms of Service</string>
    <string name="cards_summary">Manage your payment cards</string>
    <string name="touchid">Touch ID</string>
    <string name="touchid_summary">Enable/Disable Touch ID</string>
    <string name="offers">Offers Notification</string>
    <string name="offers_summary">Enable/Disable notifications for offers on products near you</string>
    <string name="elimina_prodotto_successo">Product removed successfully</string>
    <string name="carrello_vuoto">Your shopping cart is empty!</string>
    <string name="saldo_insufficente_nosconto">The selected payment credit is insufficient</string>
    <string name="saldo_insufficente_sisconto">The selected payment credit and your discount amount are insufficient</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="camps">Compile all camps</string>
    <string name="psw_short">The password is too short! Insert at least 6 characters</string>
    <string name="psw_not_equal">The two passwords don\'t match</string>
    <string name="psw_change_failed">Password change failed</string>
    <string name="psw_change_success">Password succesfully changed!</string>
    <string name="auth_error_psw">Authentication error, maybe your password is wrong</string>
    <string name="email_change_failed">Email change failed!</string>
    <string name="email_change_success">Email succesfully changed!</string>
    <string name="auth_error_mail">Authentication error, maybe your email/password is wrong</string>
    <string name="wrong_psw">Wrong password</string>
    <string name="info_intestazione">Purchase Informations</string>
    <string name="info_totale_articoli">Summary order:</string>
    <string name="info_punti_guagnati">MarangiCoin earned:</string>
    <string name="impo_intestazione">Payment Settings</string>
    <string name="impo_carta_addebitata">Balance available:</string>
    <string name="impo_sconto_disponibile">Discount available:</string>
    <string name="impo_checkbox_sconto">Do you want to use your discount?</string>
    <string name="finale_intestazione">Confirm order</string>
    <string name="finale_totale_ordine">Total amount:</string>
    <string name="finale_bottone_acquista">Buy now!</string>
    <string name="on">Yes</string>
    <string name="off">No</string>
    <string name="finale_sconto_rimasto">Remaining discount:</string>
    <string name="acquisto_riuscito">Purchase successful!</string>
    <string name="example_text1">Change Password Fragment</string>
    <string name="ordini">Your order: </string>
    <string name="titolo_1">Scansiona il codice del prodotto</string>
    <string name="titolo_2">Aggiungi al tuo carrello</string>
    <string name="titolo_3">Paga in completa tranquillità</string>
    <string name="descrizione_1">Clicca sul pulsante per aprire la fotocamera</string>
    <string name="descrizione_2">Clicca sul pulsante per aggiungere il prodotto al carrello</string>
    <string name="descrizione_3">Clicca sul pulsante del carrello per pagare</string>
    <string name="cambia">Change Password</string>
    <string name="new_email">New E-mail</string>
    <string name="cambia_email">Change E-mail</string>
</resources>