<?xml version="1.0" encoding="utf-8"?>

    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

        android:key="first_preferencescreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout="@layout/activity_settings"
        >


        <Preference
            android:key = "email"
            android:title ="@string/email"
            android:summary= "@string/email_summary"
             />

        <Preference
            android:key = "psw"
            android:title ="@string/password"
            android:summary= "@string/password_summary"
            android:fragment="com.QUeM.TreGStore.FragmentCambioPassword"
            />

        <Preference
            android:key = "cards"
            android:title ="@string/cards"
            android:summary= "@string/cards_summary"
            android:selectable="true"
            android:fragment="com.QUeM.TreGStore.FragmentCarte"/>


</PreferenceScreen>