<?xml version="1.0" encoding="utf-8"?>

<!--definizione degli elementi del menu-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_carrello"
            android:title="@string/menu_home" />
                <item
            android:id="@+id/nav_promozioni"
            android:icon="@drawable/info_icon"
            android:title="@string/menu_promozioni" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_gioco"
            android:title="@string/menu_gioco" />
        <item
            android:id="@+id/nav_marangicoin"
            android:icon="@drawable/ic_menu_marangicoin"
            android:title="@string/menu_marangicoin" />


    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_menu_quit"
                android:title="@string/menu_quit" />

        </menu>
    </item>

</menu>
