<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCarte">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/card_1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:focusableInTouchMode="true"
            android:text="@string/card1"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="@android:color/black" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_card1"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/card_2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:focusableInTouchMode="true"
            android:text="@string/card2"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/btn_back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/addCard"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_card2"
        app:layout_constraintVertical_bias="0.100000024">

        <EditText
            android:id="@+id/addCard"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:focusableInTouchMode="true"
            android:hint="@string/cardNum"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_card2"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/card_3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:focusableInTouchMode="true"
            android:text="@string/card2"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>




</android.support.constraint.ConstraintLayout>